--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "install": "^0.12.2",
     "jquery": "^3.3.1",
     "ng2-toastr": "^4.1.2",
+    "ngx-captcha": "^6.3.0",
+    "npm": "^6.8.0",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
