--- a/angular.json
+++ b/angular.json
@@ -11,8 +11,11 @@
       "schematics": {},
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path":"custom-webpack.config.js"
+            },
             "outputPath": "dist/notes-app",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -55,7 +58,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/dev-server:generic",
           "options": {
             "browserTarget": "notes-app:build"
           },
