--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^7.4.1",
+    "@angular-builders/dev-server": "^7.3.1",
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -33,7 +35,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "~0.13.4",
     "@angular/cli": "~7.1.0",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
