--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "acorn": "^6.3.0",
+    "ajv": "^6.10.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
@@ -28,8 +30,10 @@
     "jquery": "^3.3.1",
     "ng2-toastr": "^4.1.2",
     "ngx-captcha": "^6.3.0",
+    "ngx-color-picker": "^8.2.0",
     "npm": "^6.8.0",
     "popper": "^1.0.1",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
