--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,7 @@
             "customWebpackConfig": {
               "path":"custom-webpack.config.js"
             },
-            "outputPath": "dist/notes-app",
+            "outputPath": "docs",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
