--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ajv": "^6.10.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "install": "^0.12.2",
     "jquery": "^3.3.1",
